Fix colors in dark and contrast mode

--- a/src/components/button/_button-new.scss
+++ b/src/components/button/_button-new.scss
@@ -199,18 +199,14 @@
 .btn-link {
   border-radius: 8px;
 
-  &:hover {
+  &:not([disabled]):not(:disabled):hover {
     background-color: $button-color-tertiary-hover-background-new;
-    color: $button-color-tertiary-hover-font-new;
+    color: $button-hyperlink-color;
 
     svg.icon {
-      color: $button-color-tertiary-hover-font-new;
+      color: $button-hyperlink-color;
     }
   }
-}
-
-.btn-link[disabled] {
-  background-color: $button-color-tertiary-disabled-background-new;
 }
 
 // Reset standard button alignments.
