--- a/src/themes/theme-new-dark.scss
+++ b/src/themes/theme-new-dark.scss
@@ -19,13 +19,13 @@
 $body-color-primary-background: $ids-color-palette-slate-100;
 $homepage-background-color: $body-color-primary-background;
 
-$header-default-bg-color: $ids-color-palette-slate-60;
+$header-default-bg-color: $ids-color-palette-slate-90;
 $header-default-bg-hover-color: $ids-color-palette-slate-80;
 
 $input-color-focus-border: $ids-color-palette-slate-10;
 
 // Form Background Color
-$header-toolbar-button-hover-color: #3B3B3F;
+$header-toolbar-button-hover-color: $ids-color-palette-slate-70;
 $subhead-bg-color: $ids-color-brand-primary-alt;
 
 $dropdown-search-bg-color: $ids-color-palette-slate-80;
@@ -91,30 +91,30 @@ $button-hyperlink-hover-color: $ids-color-palette-slate-40;
 $button-color-primary-initial-font: $ids-color-palette-slate-90;
 $button-color-primary-initial-background: $ids-color-palette-azure-40;
 $button-color-primary-hover-background: $ids-color-palette-azure-30;
-$button-color-primary-disabled-background-new: $ids-color-palette-slate-90;
-$button-color-primary-disabled-font-new: $ids-color-palette-slate-40;
+$button-color-primary-disabled-background-new: $ids-color-palette-slate-60;
+$button-color-primary-disabled-font-new: $ids-color-palette-slate-100;
 
 $button-color-secondary-initial-font-new: $ids-color-palette-azure-40;
 $button-color-secondary-initial-border-new: $ids-color-palette-azure-40;
 $button-color-secondary-hover-border-new: $ids-color-palette-azure-40;
 $button-color-secondary-hover-background-new: $ids-color-palette-slate-90;
 $button-color-secondary-disabled-background-new: $ids-color-palette-slate-80;
-$button-color-secondary-disabled-border-new: $ids-color-palette-slate-50;
-$button-color-secondary-disabled-font-new: $ids-color-palette-slate-40;
+$button-color-secondary-disabled-border-new: $ids-color-palette-slate-60;
+$button-color-secondary-disabled-font-new: $ids-color-palette-slate-60;
 $button-color-secondary-initial-background: transparent;
 
 $button-color-tertiary-disabled-background-new: $ids-color-palette-slate-90;
-$button-color-tertiary-hover-background-new: $ids-color-palette-slate-90;
+$button-color-tertiary-hover-background-new: $ids-color-palette-slate-70;
 $button-color-tertiary-hover-font-new: $ids-color-palette-white;
+$button-color-tertiary-disabled-font: $ids-color-palette-slate-60;
 
 $button-color-primary-destructive-initial-background-new: $ids-color-palette-ruby-60;
 $button-color-primary-destructive-hover-background-new: $ids-color-palette-ruby-70;
-
 $button-color-tertiary-destructive-initial-background-new: $ids-color-palette-ruby-40;
-$button-color-tertiary-destructive-hover-font-new: $ids-color-palette-ruby-30;
-$button-color-tertiary-destructive-hover-background-new: $ids-color-palette-ruby-60;
+$button-color-tertiary-destructive-hover-font-new: $ids-color-palette-ruby-10;
+$button-color-tertiary-destructive-hover-background-new: $ids-color-palette-ruby-50;
 
-$button-color-tertiary-destructive-disabled-font-new: $ids-color-palette-slate-50;
+$button-color-tertiary-destructive-disabled-font-new: $ids-color-palette-slate-60;
 $button-color-tertiary-destructive-disabled-background-new: $ids-color-palette-slate-80;
 
 $button-icon-disabled-color: $ids-color-palette-slate-60;
@@ -849,7 +849,7 @@ $header-toolbar-searchfield-icon-color: rgba($ids-color-palette-white, 1);
 $header-button-hover-color: rgba($ids-color-palette-white, 1);
 $header-button-focus-color: rgba($ids-color-palette-white, 1);
 $header-button-color: $ids-color-palette-white;
-$header-bg-color: $ids-color-palette-slate-60;
+$header-bg-color: $ids-color-palette-slate-90;
 $header-primary-btn-background-color: $ids-color-palette-slate-70;
 $header-primary-btn-background-hover-color: $ids-color-palette-slate-80;
 $header-flex-toolbar-input-searchfield-color: $ids-color-palette-white;
